@@ -11,6 +11,7 @@ Bugfixes:
  - GBA Cheats: Fix GameShark ROM patches
  - GB MBC: Fix initializing MBC when no ROM is loaded
  - VFS: Fix resizing memory chunks when not needed
+ - GB Memory: Fix patching ROM bank 0
 Misc:
  - PSP2: Improved controller rumble
  - GB, GBA: Prevent loading null ROMs
